Bug 449881 - Scale desktop effect is no longer configurable
Summary: Scale desktop effect is no longer configurable
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwineffects (other bugs)
Version First Reported In: 5.24.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-02-09 19:08 UTC by Phos
Modified: 2022-02-11 16:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Phos 2022-02-09 19:08:54 UTC
SUMMARY
Scale desktop effect in Desktop Effects KCM is no longer configurable


STEPS TO REPRODUCE
1. Open System Settings
2. Navigate to Desktop Effects
3. Notice that the Scale windows Open/Close animation is no longer configurable

OBSERVED RESULT
Scale effect is no longer configurable

EXPECTED RESULT
Scale effect should be configurable (as it was previously)

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.16.7-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Comment 1 Nicolas Fella 2022-02-10 17:04:02 UTC
Reverting https://invent.kde.org/plasma/kwin/-/commit/a1340a98154cc5f0517a1c107153d33ae82ce495 fixes this
Comment 2 Bug Janitor Service 2022-02-10 17:40:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1996
Comment 3 Bug Janitor Service 2022-02-11 09:37:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2000
Comment 4 Vlad Zahorodnii 2022-02-11 15:59:48 UTC
Git commit e70ec569e3ab2a39580b5ed758a0ee653ccceff2 by Vlad Zahorodnii, on behalf of Alexander Lohnau.
Committed on 11/02/2022 at 15:40.
Pushed by vladz into branch 'master'.

Fix loading of effect if plugin defined X-KDE-Library

Otherwise we get the filename to the library and not the KPackage.

The plugin having this set is most likely a leftover, because KPackage plugins
to not need to define a library.

M  +1    -1    src/kcmkwin/common/effectsmodel.cpp

https://invent.kde.org/plasma/kwin/commit/e70ec569e3ab2a39580b5ed758a0ee653ccceff2
Comment 5 Vlad Zahorodnii 2022-02-11 16:00:41 UTC
Git commit 79fadcc6082d20dca71f99321779f34b21f9481c by Vlad Zahorodnii, on behalf of Alexander Lohnau.
Committed on 11/02/2022 at 16:00.
Pushed by vladz into branch 'Plasma/5.24'.

Fix loading of effect if plugin defined X-KDE-Library

Otherwise we get the filename to the library and not the KPackage.

The plugin having this set is most likely a leftover, because KPackage plugins
to not need to define a library.


(cherry picked from commit e70ec569e3ab2a39580b5ed758a0ee653ccceff2)

M  +1    -1    src/kcmkwin/common/effectsmodel.cpp

https://invent.kde.org/plasma/kwin/commit/79fadcc6082d20dca71f99321779f34b21f9481c